refactor: Improve code readability